--- a/readme
+++ b/readme
@@ -6,7 +6,26 @@ e-mail：huangjunkun@gmail.com
 
 欢迎交流，谢谢！
 
+2.
 
+/**
+** 源文件： convex_hull.h, convex_hull.cpp
+** 功能：凸包问题的解决方案, 蛮力法与分治法.
+** 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包问题.
+** 蛮力法使用到几何知识:
+	{(x1, y1), (x2, y2)} => ax + by = c 
+	=> {a = y2-y1, b = x1 - x2, c = x1y2 - y1x2}
+	使用公式ax + by = c可判断点(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
+** 分治法法使用到几何知识:
+	
+** 算法实现详见以上源文件代码.
+** 凸包问题描述:
+	定理:任意包含n>2个点（不共线）的集合S的凸包是以S中的某些点为顶点的凸多边形。
+	凸包问题是为一个n个点的集合构造凸包的问题。
+	极点：对于任何一集合中的点为端点的线段来说，它们不是这种线段的中点。
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 日期：2009-09-20 /
+*/
 1.
 
 /**
