--- a/readme
+++ b/readme
@@ -16,7 +16,13 @@ e-mail：huangjunkun@gmail.com
 	{(x1, y1), (x2, y2)} => ax + by = c 
 	=> {a = y2-y1, b = x1 - x2, c = x1y2 - y1x2}
 	使用公式ax + by = c可判断点(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
-** 分治法法使用到几何知识:
+** 分治法使用到几何知识:
+	{(x1, y1), (x2, y2), (x3, y3)} P1, P2, P3.面积S(P1P2P3)为以下行列式二分之一，
+	|x1 y1 1|
+	|x2 y2 1| = x1y2 + x3y1 + x2y3 - x3y2 - x2y1 - x1y3
+	|x3 y3 1|
+	P3位于直线P1P2的左侧时，该表达式为正值。
+	P3位于直线P1P2的右侧时，该表达式为负值。
 	
 ** 算法实现详见以上源文件代码.
 ** 凸包问题描述:
