--- a/readme
+++ b/readme
@@ -13,9 +13,11 @@ e-mail：huangjunkun@gmail.com
 ** 功能：凸包问题的解决方案, 蛮力法与分治法.
 ** 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包问题.
 ** 蛮力法使用到几何知识:
-	{(x1, y1), (x2, y2)} => ax + by = c 
+	P1，P2{(x1, y1), (x2, y2)} => ax + by = c 
 	=> {a = y2-y1, b = x1 - x2, c = x1y2 - y1x2}
-	使用公式ax + by = c可判断点(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
+	使用公式ax + by = c可判断点P3(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
+	=> 循环遍历所有的点，找出所有像P1，P2的点，满足条件：
+	其他所有的点均分布在直线P1P2同一边。
 ** 分治法使用到几何知识:
 	{(x1, y1), (x2, y2), (x3, y3)} P1, P2, P3.面积S(P1P2P3)为以下行列式二分之一，
 	|x1 y1 1|
@@ -23,6 +25,7 @@ e-mail：huangjunkun@gmail.com
 	|x3 y3 1|
 	P3位于直线P1P2的左侧时，该表达式为正值。
 	P3位于直线P1P2的右侧时，该表达式为负值。
+	=> 可以借助以上公式不断将点集合划分上包下包，以递归形式分治算法完成解决凸包问题。
 	
 ** 算法实现详见以上源文件代码.
 ** 凸包问题描述:
