--- a/readme
+++ b/readme
@@ -11,22 +11,34 @@ e-mail：huangjunkun@gmail.com
 /**
 ** 源文件： convex_hull.h, convex_hull.cpp
 ** 功能：凸包问题的解决方案, 蛮力法与分治法.
-** 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包问题.
 ** 蛮力法使用到几何知识:
-	P1，P2{(x1, y1), (x2, y2)} => ax + by = c 
-	=> {a = y2-y1, b = x1 - x2, c = x1y2 - y1x2}
-	使用公式ax + by = c可判断点P3(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
-	=> 循环遍历所有的点，找出所有像P1，P2的点，满足条件：
-	其他所有的点均分布在直线P1P2同一边。
+ P1，P2{(x1, y1), (x2, y2)} => ax + by = c
+ => {a = y2-y1, b = x1 - x2, c = x1y2 - y1x2}
+ 使用公式ax + by = c可判断点P3(x3, y3)落在{(x1, y1), (x2, y2)}哪边.
+蛮力解法步骤：
+1. 循环遍历所有的点，找出所有像P1，P2的点，需满足条件：
+ 其他所有的点均分布在直线P1P2同一边，借助以上几何知识。
+2. 找出了所有这样的点，那么就完成凸包问题。
+
+蛮力解决方案时间复杂度O(n^3).
+
 ** 分治法使用到几何知识:
-	{(x1, y1), (x2, y2), (x3, y3)} P1, P2, P3.面积S(P1P2P3)为以下行列式二分之一，
-	|x1 y1 1|
-	|x2 y2 1| = x1y2 + x3y1 + x2y3 - x3y2 - x2y1 - x1y3
-	|x3 y3 1|
-	P3位于直线P1P2的左侧时，该表达式为正值。
-	P3位于直线P1P2的右侧时，该表达式为负值。
-	=> 可以借助以上公式不断将点集合划分上包下包，以递归形式分治算法完成解决凸包问题。
-	
+ {(x1, y1), (x2, y2), (x3, y3)} P1, P2, P3.面积S(P1P2P3)为以下行列式绝对值的一半，
+ |x1 y1 1|
+ |x2 y2 1| = x1y2 + x3y1 + x2y3 - x3y2 - x2y1 - x1y3
+ |x3 y3 1|
+ P3位于直线P1P2的左侧时，该表达式为正值。
+ P3位于直线P1P2的右侧时，该表达式为负值。
+ 该绝对值越大，即P3就与直线P1P2距离越大。
+分治解法步骤：
+1. 按照X轴（或Y轴）排序点集合S0，得到最小大值P1，Pn，并划分上包，下包不同点集合。
+2. 以上包为例，根据以上几何知识，找出上包顶点Pmax即距离P1Pn最远的点，找不到即结束。
+3. 继续以P1Pmax和PmaxPn构造上包，递归下去直至找不到上包顶点。得到点集合S1.
+4. 下包操作同。得到点集合S2.
+5. 合并集合S1, S2, 得到S3即凸包结果.
+
+分治法解决方案时间复杂度O(n^2).
+btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包问题.
 ** 算法实现详见以上源文件代码.
 ** 凸包问题描述:
 	定理:任意包含n>2个点（不共线）的集合S的凸包是以S中的某些点为顶点的凸多边形。
