--- a/readme
+++ b/readme
@@ -6,11 +6,59 @@ e-mail：huangjunkun@gmail.com
 
 欢迎交流，谢谢！
 
-## 8.
-## 7.
-## 6.
+####### 9.
+####### 8.
+####### 9.
+/**
+** 源文件： knapsack _test.cpp
+** 功能说明：
+** 测试程序，背包问题与记忆功能。算法详细介绍详见《算法分析与设计》8.4背包问题与记忆功能。
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 /
+*/
 
-## 5.
+####### 8.
+/**
+** 源文件： horner_rule.cpp
+** 功能说明：
+** 测试程序，霍纳法则用于计算多项式值的一种古老的算法，但却十分优雅和高效。
+** 霍纳法则还有一些有用的副产品，例如有多项式P(x)，在计算P(a)的值过程产生的中间数字，
+	可组织作为P(X)除以X-a商与余数。详见《算法分析与设计》6.5.1霍纳法则。
+** 关于霍纳法则，详见http://baike.baidu.com/view/3060869.htm
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 /
+*/
+
+####### 7.
+/**
+** 源文件： binomial_coefficient.cpp
+** 功能说明：
+** 测试程序，计算二项式系数，一个动态规划解法应用的典型例子，简单易理解。
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 /
+*/
+
+####### 6.
+/**
+** 源文件： greatest_common_divisor.cpp
+** 功能说明：
+** 测试程序，计算两个数的最小公约数，不同解法：
+	a. 欧几里得算法 gcd1.
+	b. 计算gcd(m, n)的连续整数检测算法gcd2.
+	c. 中学里的计算方法gcd3, 相对最复杂的办法,但是有效的.
+		1 找到m的所有质数prime1；
+		2 找到n的所有质数prime2；
+		3 从prime1和prime2中找出所有的公因数com_prime。
+		注意：如果p是其中一个公因数，而且在prime1和prime2中分别出现Pm，Pn次
+		那么应该将p重复min{Pm, Pn}次；
+		4 将com_prime的所有质因数相乘，结果即m, n最大公约数。
+		（gcd3解法O_o 够折腾的求解过程吧。）
+
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 /
+*/
+
+####### 5.
 /**
 ** 源文件： convex_hull.h, convex_hull.cpp
 ** 功能：凸包问题的解决方案, 蛮力法与分治法.
@@ -51,7 +99,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 日期：2009-09-20 /
 */
 
-## 4.
+####### 4.
 /**
 ** 源文件： min_spanning_tree.cpp
 ** 功能说明：
@@ -60,7 +108,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 创建日期：2008-11 /
 */
 
-## 3.
+####### 3.
 /**
 ** 源文件： nearest_neighbor_search.cpp
 ** 功能说明：
@@ -69,7 +117,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 创建日期：2008-11 /
 */
 
-## 2.
+####### 2.
 /**
 ** 源文件： shortest_path.cpp
 ** 功能说明：
@@ -78,8 +126,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 创建日期：2008-11 /
 */
 
-## 1.
-
+####### 1.
 /**
 ** 源文件： random_list_node.h, random_list_node_test.cpp
 ** 功能：拷贝“随机链表”，即节点带有一个指针可能指向链表随机另一个节点的链表。
@@ -87,4 +134,13 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 具体操作，需要遍历源链表三遍。包括拷贝链表+复制随机指针+回复源链表NEXT指针。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
 ** 日期：2011-06-10 /
+*/
+
+####### 0.
+/**
+** 源文件： hanoi_tower_test.cpp
+** 功能说明：
+** 测试程序，汉若塔的计算（搬运次数）与演示搬运过程。
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 /
 */
