--- a/readme
+++ b/readme
@@ -6,15 +6,68 @@ e-mail：huangjunkun@gmail.com
 
 欢迎交流，谢谢！
 
-####### 9.
-####### 8.
+
+####### 15.
+
+####### 14.
+
+####### 13.
+/**
+** 源文件： find_a_fake_coin.cpp
+** 功能说明：
+** 测试程序，假币问题：有若干金币【3-1000】，存有一假币，且不知假币较轻或较重，用一天枰找出其中的假币且知其轻重，
+	要求比较次数越少越好。
+** 以下程序以分治法，递归的形式求解包括，二分法，三分法和四分法。程序逻辑有一定相似性，但效率不一。整体上效率：
+** 三分法 >= 四分法 >= 二分法
+** 具体实现，详见源码与注释说明。
+
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 前 /
+*/
+
+####### 12.
+/**
+** 源文件： find_a_fake_coin_form_12.cpp
+** 功能说明：
+** 测试程序，假币问题：12枚金币中存有一假币，且不知假币较轻或较重，给一天枰限称3次找出其中的假币并知其轻重。
+    程序罗列出所有不同的解法，共2*12种。
+
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 前 /
+*/
+
+####### 11.
+/**
+** 源文件： josephus_problem.cpp
+** 功能说明：
+** 测试程序，模拟约瑟夫问题的演示。以下采用两种数据结构实现：
+	1. 数组；2. 循环链表。
+	整体上，循环链表要优于数组，但数组的实现可能较易于理解与编码。
+
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 前 /
+*/
+
+####### 10.
+/**
+** 源文件： gauss_elimination.cpp
+** 功能说明：
+** 测试程序，用高斯消去法求解方程组，详见《算法分析与设计》6.2高斯消去法。
+** 用到方程组的初等变换：
+	1. 交换方程组中两个方程的位置；
+	2. 把一个方程替换为它的非零倍；
+	3. 把一个方程替换为它和另一个方程倍数之间的和或差。
+** 作者：junkun huang  e-mail：huangjunkun@gmail.com
+** 创建日期：2008-11 前 /
+*/
+
 ####### 9.
 /**
 ** 源文件： knapsack _test.cpp
 ** 功能说明：
 ** 测试程序，背包问题与记忆功能。算法详细介绍详见《算法分析与设计》8.4背包问题与记忆功能。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 8.
@@ -26,7 +79,7 @@ e-mail：huangjunkun@gmail.com
 	可组织作为P(X)除以X-a商与余数。详见《算法分析与设计》6.5.1霍纳法则。
 ** 关于霍纳法则，详见http://baike.baidu.com/view/3060869.htm
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 7.
@@ -35,7 +88,7 @@ e-mail：huangjunkun@gmail.com
 ** 功能说明：
 ** 测试程序，计算二项式系数，一个动态规划解法应用的典型例子，简单易理解。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 6.
@@ -55,7 +108,7 @@ e-mail：huangjunkun@gmail.com
 		（gcd3解法O_o 够折腾的求解过程吧。）
 
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 5.
@@ -96,7 +149,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 	凸包问题是为一个n个点的集合构造凸包的问题。
 	极点：对于任何一集合中的点为端点的线段来说，它们不是这种线段的中点。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 日期：2009-09-20 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 4.
@@ -105,7 +158,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 功能说明：
 ** 测试程序，最小生成树问题CMST解决方案Prim算法与Kruskal算法。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 3.
@@ -114,7 +167,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 功能说明：
 ** 测试程序，最近点对问题解决方案，蛮力法与分治法。详见以下代码。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 2.
@@ -123,7 +176,7 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 功能说明：
 ** 测试程序，最短路径问题解决方案，Floyd算法与Dijkstra算法。详见以下代码。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
 
 ####### 1.
@@ -142,5 +195,5 @@ btw 详细的算法可以参见<算法分析与设计> 3.蛮力法3.3.2凸包问题 & 4.分治法4.6.2凸包
 ** 功能说明：
 ** 测试程序，汉若塔的计算（搬运次数）与演示搬运过程。
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
-** 创建日期：2008-11 /
+** 创建日期：2008-11 前 /
 */
