--- a/readme
+++ b/readme
@@ -13,7 +13,18 @@ e-mail：huangjunkun@gmail.com
 /**
 ** 源文件： queen_problem.cpp, queen_problem.h
 ** 功能说明：
-** N皇后问题的解法。应用回溯法求解。
+** N皇后问题的解法。应用回溯法求解问题的所有解法。
+回溯法百科
+回溯法(探索与回溯法)是一种选优搜索法，按选优条件向前搜索，以达到目标。但当探索到某一步时，
+发现原先选择并不优或达不到目标，就退回一步重新选择，这种走不通就退回再走的技术为回溯法，
+而满足回溯条件的某个状态的点称为“回溯点”。
+
+程序结构说明：
+	1.	先将第一个皇后固定在第一列的某一点上。
+	2.	在当前列，寻找合理位置摆放皇后，即任意两个皇后都不能处于同一行、同一列或同一斜线上。
+	2.1	若找到合理位置，那么将让“回溯点”记录在栈容器中，继续寻找下一列的摆放下一皇后的合理位置。
+	2.2	若找不到合理位置，则从栈容器回溯上一列皇后的下一位置，再进行步骤2。
+	3.	直至回溯到第一列。
 
 ** 作者：junkun huang  e-mail：huangjunkun@gmail.com
 ** 创建日期：2008-11 前 /
