update queen_problem^s readme

--- a/readme
+++ b/readme
@@ -20,9 +20,9 @@ e-mail：huangjunkun@gmail.com
 而满足回溯条件的某个状态的点称为“回溯点”。
 
 程序结构说明：
-	1.	先将第一个皇后固定在第一列的某一点上。
-	2.	在当前列，寻找合理位置摆放皇后，即任意两个皇后都不能处于同一行、同一列或同一斜线上。
-	2.1	若找到合理位置，那么将让“回溯点”记录在栈容器中，继续寻找下一列的摆放下一皇后的合理位置。
+	1.	先将第一个皇后固定在第一列第一行的位置。
+	2.	在下一列，寻找合理位置摆放皇后，即任意两个皇后都不能处于同一行、同一列或同一斜线上。
+	2.1	若找到合理位置，那么将让“回溯点”记录在栈容器中，继续寻找下一列摆放下一皇后的合理位置。
 	2.2	若找不到合理位置，则从栈容器回溯上一列皇后的下一位置，再进行步骤2。
 	3.	直至回溯到第一列。
 
