--- a/readme
+++ b/readme
@@ -6,8 +6,71 @@ e-mail：huangjunkun@gmail.com
 
 欢迎交流，谢谢！
 
+####### 15.
+
 
 ####### 15.
+
+
+####### 15.
+
+####### 16.
+
+/**
+** 源文件： huffman_code.cpp. huffman_code.h
+** 功能说明：
+** 测试程序，霍夫曼编码的简单应用及其演示。如程序运行霍夫曼自动编码功能效果如下：
+请输入你要进行编码的字符串：abbcccddddeeeeeffffff
+          字符  权值  编码      编码长度
+           a      1   1110      4
+           b      2   1111      4
+           c      3    110      3
+           d      4     00      2
+           e      5     01      2
+           f      6     10      2
+** wiki介绍：http://zh.wikipedia.org/zh/%E9%9C%8D%E5%A4%AB%E6%9B%BC%E7%BC%96%E7%A0%81
+** 具体实现，详见源码与注释说明。
+
+** 作者：junkun huang
+** 创建日期：2008-11 前 /
+*/
+
+####### 15.
+/**
+** 源文件： evaluate_ expr.cpp
+** 功能说明：
+** 测试程序，表达式求值解法，栈数据结构经典应用，需要预先定义运算符op的优先级。
+	1. 中缀表达式到后缀表达式的转换；
+	2. 后缀表达式求值。
+转：
+
+中缀表达式到后缀表达式的转换
+　　要把表达式从中缀表达式的形式转换成用后缀表示法表示的等价表达式，必须了解操作符的优先级和结合性。
+  优先级或者说操作符的强度决定求值顺序；优先级高的操作符比优先级低的操作符先求值。 如果所有操作符优先级一样，
+  那么求值顺序就取决于它们的结合性。操作符的结合性定义了相同优先级操作符组合的顺序（从右至左或从左至右）。
+  转换过程包括用下面的算法读入中缀表达式的操作数、操作符和括号：
+	1. 初始化一个空堆栈，将结果字符串变量置空。
+	2. 从左到右读入中缀表达式，每次一个字符。
+	3. 如果字符是操作数，将它添加到结果字符串。
+	4. 如果字符是个操作符，弹出（pop）操作符，直至遇见开括号（opening parenthesis）、优先级较低的操作符或者同一优先级的右结合符号。
+	把这个操作符压入（push）堆栈。
+	5. 如果字符是个开括号，把它压入堆栈。
+	6. 如果字符是个闭括号（closing parenthesis），在遇见开括号前，弹出所有操作符，然后把它们添加到结果字符串。
+	7. 如果到达输入字符串的末尾，弹出所有操作符并添加到结果字符串。
+
+后缀表达式求值
+对后缀表达式求值比直接对中缀表达式求值简单。在后缀表达式中，不需要括号，而且操作符的优先级也不再起作用了。
+您可以用如下算法对后缀表达式求值：
+	1. 初始化一个空堆栈
+	2. 从左到右读入后缀表达式
+	3. 如果字符是一个操作数，把它压入堆栈。
+	4. 如果字符是个操作符，弹出两个操作数，执行恰当操作，然后把结果压入堆栈。如果您不能够弹出两个操作数，后缀表达式的语法就不正确。
+	5. 到后缀表达式末尾，从堆栈中弹出结果。若后缀表达式格式正确，那么堆栈应该为空。
+
+
+** 作者：junkun huang
+** 创建日期：2008-09 前 /
+*/
 
 ####### 14.
 /**
