--- a/readme
+++ b/readme
@@ -6,14 +6,28 @@ e-mail：huangjunkun@gmail.com
 
 欢迎交流，谢谢！
 
-####### 15.
+####### 19.
 
 
-####### 15.
+####### 18.
 
 
-####### 15.
+####### 17.
+/**
+** 源文件： test_special_sort.cpp
+** 功能说明：
+	引用自：http://groups.google.com/group/pongba/t/54146dfb71a67827
+	特殊排序题目：
+	姓名集合names，名次集合ranks，按照名次顺序输出她们的名字，要求O(N)时间。解法如下：
+	
+	解法一，不改变原来集合顺序，O(N)时间， O(N)空间。
+	描述： 数组下标相当于姓名索引，新空间已名次顺序记录着姓名索引。
+	
+	解法二，在位重新排序，改变原来集合顺序，O(N)时间， O(1)空间。
+	描述：每一次swap确定一个的位置，最多总共N次swap能全部定位。
 
+	===
+*/
 ####### 16.
 
 /**
